--- a/Sportsblr/app/views/layouts/application.html.erb
+++ b/Sportsblr/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
   </head>
 
   <body>
+      <script type="text/javascript">
+        window.snowboardURL = "<%= image_url('snowboarder_snowboard_snow_135160_1920x1080.jpg') %>";
+      </script>
     <%= yield %>
   </body>
 </html>
