added background image and styling

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -6,6 +6,10 @@
   </script>
 <% end %>
 
+<script type="text/javascript">
+  window.snowboardURL = "<%= image_url('snowbord.jpg') %>";
+</script>
+
 <div id="root">
 
 </div>
