--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -8,6 +8,7 @@
 
 <script type="text/javascript">
   window.snowboardURL = "<%= image_url('snowbord.jpg') %>";
+  window.fcb = "<%= image_url('fcb.jpg') %>";
 </script>
 
 <div id="root">
