--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,9 @@
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
     <%= favicon_link_tag 'snowbord.jpg' %>
+
+    <script src="https://kit.fontawesome.com/29e5d21619.js" crossorigin="anonymous"></script>
+
   </head>
 
   <body>
