added dashboard page

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -9,6 +9,7 @@
 <script type="text/javascript">
   window.snowboardURL = "<%= image_url('snowbord.jpg') %>";
   window.fcb = "<%= image_url('fcb.jpg') %>";
+  window.soccerball = "<%= image_url('soccerball.jpg') %>";
   window.basketball = "<%= image_url('basketball.jpg') %>";
 </script>
 
