--- a/app/assets/stylesheets/greeting.scss
+++ b/app/assets/stylesheets/greeting.scss
@@ -46,7 +46,20 @@
 .welcome {
     position: absolute;
     top: 2%;
-    left: 65%;
+    left: 20%;
     transform: translate(-50%, -50%);
-    color: rgb(54, 124, 182);
+    color: rgb(178, 245, 178);
+}
+
+.dashboard {
+    position: absolute;
+    top: 2%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(40, 106, 145, 0.8);
+    color: whitesmoke;
+    border-radius: 5px;
+    padding: 5px;
+    padding-left: 60px;
+    padding-right: 60px;
 }
