--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -5,7 +5,7 @@
 
 .logo {
     font-size: 50px;
-    color: blue;
+    color: rgb(240, 240, 247);
     margin: 10px;
 }
 
@@ -18,27 +18,8 @@
 }
 
 .nav-loggedin {
-    border-bottom: 2px solid rgb(53, 118, 138);
+    border-bottom: 2px solid rgb(59, 75, 80);
 }
-
-// .search-box {
-//     padding: 10px;
-//     padding-left: 35px;
-//     padding-right: 60px;
-//     margin: 10px;
-//     border: 0px transparent;
-//     border-radius: 3px;
-//     width: 300px;
-//     background-color: rgba(163, 235, 240, 0.2);
-//     font-size: 20px;
-// }
-
-// .search-box:focus {
-//     background-color: white;
-//     color: black;
-// }
-
-// ---------------------------------
 
 .right-nav > .logout {
     // display: flex;
@@ -57,15 +38,17 @@
     transform: translate(-50%, -50%);
 }
 
-.logout-dropdown {
-    display: none;
+.right-nav > ul, .user-dropdown > ul > li {
+    list-style: none;
 }
 
+
 .user-dropdown {
+    display: none;
     // padding: 20px;
 }
 
-.icon-li:hover .logout-dropdown {
+.icon-li:hover .user-dropdown {
     display: block;
     border: 2px solid rgb(228, 223, 223);
     position: absolute;
