fixing html and css for dropdown

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -5,7 +5,7 @@
 
 .logo {
     font-size: 50px;
-    color: rgb(240, 240, 247);
+    color: white;
     margin: 10px;
 }
 
@@ -18,23 +18,14 @@
 }
 
 .nav-loggedin {
-    border-bottom: 2px solid rgb(59, 75, 80);
-}
-
-.right-nav > .logout {
-    // display: flex;
-    // justify-content: flex-end;
-    position: absolute;
-    top: 4%;
-    left: 93.5%;
-    transform: translate(-50%, -50%);
+    border-bottom: 1px solid rgb(145, 193, 207);
 }
 
 .fas {
     color: white;
     position: absolute;
     top: 4%;
-    left: 83.5%;
+    left: 93.5%;
     transform: translate(-50%, -50%);
 }
 
@@ -42,24 +33,38 @@
     list-style: none;
 }
 
-
-.user-dropdown {
-    display: none;
-    // padding: 20px;
+.icon-li:hover {
+    cursor: pointer;
 }
 
-.icon-li:hover .user-dropdown {
+.account {
+    display: none;
+}
+
+.icon-li:hover .account {
     display: block;
     border: 2px solid rgb(228, 223, 223);
     position: absolute;
     top: 7%;
-    left: 83.5%;
+    left: 93.5%;
     transform: translate(-50%, -50%);
     width: 100px;
 }
 
-.user-dropdown:hover .logout-dropdown {
-    display: block;
-}
+// .user-dropdown {
+//     display: none;
+// }
 
+// .icon-li:hover .user-dropdown {
+//     display: block;
+//     border: 2px solid rgb(228, 223, 223);
+//     position: absolute;
+//     top: 7%;
+//     left: 93.5%;
+//     transform: translate(-50%, -50%);
+//     width: 100px;
+// }
 
+// .user-dropdown:hover .logout-dropdown {
+//     display: block;
+// }
