--- a/app/assets/stylesheets/greeting.scss
+++ b/app/assets/stylesheets/greeting.scss
@@ -53,13 +53,14 @@
 
 .dashboard {
     position: absolute;
-    top: 1.5%;
+    top: 1.3%;
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: rgba(40, 106, 145, 0.8);
     color: whitesmoke;
     border-radius: 5px;
-    padding: 5px;
+    // padding: 5px;
     padding-left: 60px;
     padding-right: 60px;
+    
 }
