--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -15,7 +15,6 @@
 
 .left-nav {
     display: flex;
-    height: 60px;
 }
 
 .nav-loggedin {
@@ -49,14 +48,6 @@
     right: 0;
     left: 0;
     z-index: 1;
-}
-
-#root {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
 }
 
 .icon-li:hover .account {
@@ -99,4 +90,17 @@
 
 .logout-dropdown {
     cursor: pointer;
+}
+
+.dashboard {
+    position: absolute;
+    top: 1.3%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(40, 106, 145, 0.8);
+    color: whitesmoke;
+    border-radius: 5px;
+    padding: 5px;
+    padding-left: 60px;
+    padding-right: 60px;
 }
