--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
 
     <script src="https://kit.fontawesome.com/29e5d21619.js" crossorigin="anonymous"></script>
 
+    <!-- <meta name=”viewport” content=”width=device-width, initial-scale=1″> -->
+
   </head>
 
   <body>
