--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -7,6 +7,8 @@
     font-size: 50px;
     color: white;
     margin: 10px;
+    font-weight: bolder;
+    font-family: sans-serif;
 }
 
 .navbar {
@@ -24,7 +26,7 @@
 .fas {
     color: white;
     position: absolute;
-    top: 4%;
+    top: 2.7%;
     left: 93.5%;
     transform: translate(-50%, -50%);
 }
@@ -50,11 +52,20 @@
     z-index: 1;
 }
 
+.dashboard-div {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    overflow-y: scroll;
+}
+
 .icon-li:hover .account {
     display: block;
     border: 2px solid rgb(228, 223, 223);
     position: absolute;
-    top: 6%;
+    top: 6.5%;
     left: 96.5%;
     transform: translate(-50%, -50%);
     background-color: gray;
@@ -66,7 +77,7 @@
     display: block;
     border: 2px solid rgb(228, 223, 223);
     position: absolute;
-    top: 12%;
+    top: 11%;
     left: 92.5%;
     transform: translate(-50%, -50%);
     width: 200px;
@@ -79,11 +90,13 @@
 
 .li-button {
     position: absolute;
-    top: 8.8%;
+    top: 15.6%;
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: lightgrey;
     border-radius: 3px;
+    padding-bottom: 10px;
+    padding-top: 5px;
     padding-left: 78px;
     padding-right: 78px;
 }
@@ -94,12 +107,16 @@
 
 .dashboard {
     position: absolute;
-    top: 1.3%;
+    top: 2.8%;
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: rgba(40, 106, 145, 0.8);
     color: whitesmoke;
     border-radius: 5px;
+    padding: 5px;
     padding-left: 60px;
     padding-right: 60px;
+    font-size: 15px;
+    font-family: sans-serif;
+    font-weight: bold;
 }
