--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
-    <%= favicon_link_tag 'snowbord.jpg' %>
+    <%= favicon_link_tag 'favicon.png' %>
 
     <script src="https://kit.fontawesome.com/29e5d21619.js" crossorigin="anonymous"></script>
 
