--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -7,6 +7,7 @@
     font-size: 50px;
     color: white;
     margin: 10px;
+    margin-left: 180px;
     font-weight: bolder;
     font-family: sans-serif;
 }
@@ -27,12 +28,8 @@
     color: white;
     position: absolute;
     top: 2.7%;
-    left: 93.5%;
+    left: 89%;
     transform: translate(-50%, -50%);
-}
-
-.right-nav > ul, .user-dropdown > ul > li {
-    list-style: none;
 }
 
 .icon-li:hover {
@@ -65,8 +62,8 @@
     display: block;
     border: 2px solid rgb(228, 223, 223);
     position: absolute;
-    top: 6.5%;
-    left: 96.5%;
+    top: 5.5%;
+    left: 91.9%;
     transform: translate(-50%, -50%);
     background-color: gray;
     color: white;
@@ -77,8 +74,8 @@
     display: block;
     border: 2px solid rgb(228, 223, 223);
     position: absolute;
-    top: 11%;
-    left: 92.5%;
+    top: 10%;
+    left: 89%;
     transform: translate(-50%, -50%);
     width: 200px;
     height: 100px;
