--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -1,11 +1,52 @@
 
-.dashboard-div {
+
+// .dashboard-div {
+
+// }
+
+.navbar {
     position: fixed;
     top: 0;
-    bottom: 0;
     right: 0;
     left: 0;
-    overflow-y: scroll;
+}
+
+.main-nav {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+}
+
+.main-nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.flex-box-nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    min-width: 1500px;
+    // border: 1px solid rgb(60, 255, 0);
+    margin-left: 20px;
+}
+
+.flex-logo {
+    // border: 1px solid red;
+    margin-left: 20px;
+}
+
+.flex-icon {
+    width: 300px;
+    height: 40px;
+    // border: 1px solid red;
+    margin-right: 100px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    position: relative;
 }
 
 .logo:hover {
@@ -14,22 +55,13 @@
 }
 
 .logo {
-    position: absolute;
-    top: 3%;
-    left: 10%;
-    transform: translate(-50%, -50%);
     font-size: 40px;
     color: white;
-    // margin: 10px;
     font-weight: bolder;
     font-family: sans-serif;
 }
 
 .dashboard {
-    position: absolute;
-    top: 2.8%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     background-color: rgba(40, 106, 145, 0.8);
     color: whitesmoke;
     border-radius: 5px;
@@ -46,21 +78,6 @@
     border-bottom: 1px solid rgb(145, 193, 207);
 }
 
-.icon-li {
-    position: absolute;
-    top: 3%;
-    left: 89%;
-    transform: translate(-50%, -50%);
-}
-
-.fas {
-    color: white;
-}
-
-.fas:hover {
-    cursor: pointer;
-}
-
 .account {
     display: none;
 }
@@ -71,61 +88,72 @@
     bottom: 0;
     right: 0;
     left: 0;
-    z-index: 1;
+    z-index: -1;
 }
 
 .icon-li:hover .account {
     display: block;
     position: absolute;
-    top: 125%;
-    left: 125%;
+    bottom: -50%;
+    right: -23%;
     border: 2px solid rgb(228, 223, 223);
     background-color: gray;
     color: white;
     padding: 5px;
+    cursor: default;
+}
+
+.fas {
+    color: white;
+}
+
+.fas:hover {
+    cursor: pointer;
 }
 
 .user-dropdown-div {
     display: block;
-    border: 2px solid rgb(228, 223, 223);
     position: absolute;
-    top: 11%;
-    left: 89%;
-    transform: translate(-50%, -50%);
+    bottom: -260%;
+    right: -27%;
+    border: 2px solid rgb(228, 223, 223);
     width: 200px;
     height: 100px;
     z-index: 2;
     background-color: whitesmoke;
     border: 1px solid lightgray;
     border-radius: 3px;
+
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: flex-start;
 }
 
 .logout-dropdown-li {
-    position: absolute;
-    top: 15.6%;
-    left: 67%;
-    transform: translate(-50%, -50%);
     background-color: lightgrey;
-    border-radius: 3px;
-    padding-bottom: 10px;
-    padding-top: 5px;
-    padding-left: 78px;
-    padding-right: 8px;
+    padding: 10px;
+    padding-left: 40px;
 }
 
 .account-dropdown {
     background-color: lightgrey;
-    border-radius: 3px;
-    padding-bottom: 10px;
-    padding-top: 5px;
-    padding-left: 8px;
-    padding-right: 78px;
+    padding: 10px;
+    padding-right: 40px;
+}
+
+.account-dropdown > span {
+    cursor: default;
 }
 
 .logout-dropdown-button {
     cursor: pointer;
 }
 
-.account-dropdown > span {
-    cursor: default;
-}
+
+
+
+
+
+
+// -------------------------------
