added styling for dynamic view

--- a/app/assets/stylesheets/greeting.scss
+++ b/app/assets/stylesheets/greeting.scss
@@ -16,15 +16,18 @@
         z-index: -3;
     }
 
-    .flex-box-nav {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        min-width: 200px;
-        // border: 1px solid rgb(60, 255, 0);
-        margin-left: 20px;
-    }
+    
 }
+
+// @media only screen and (max-width: 600px) {
+//     .flex-box-nav {
+//         display: flex;
+//         justify-content: space-between;
+//         align-items: center;
+//         max-width: 200px;
+//         margin-left: 20px;
+//     }
+// }
 
 // /* Mobile Styles */
 // @media only screen and (max-width: 400px) {
