--- a/app/assets/stylesheets/session-form.scss
+++ b/app/assets/stylesheets/session-form.scss
@@ -63,26 +63,28 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    border-left: 0.3px solid white;
+    border-right: 0.3px solid white;
+    border-radius: 4px;
 }
 
 .email {
     border-top: none;
     border-left: none;
     border-right: none;
-    border-bottom: 0.5px solid lightgray;
+    border-bottom: 0.5px solid #e3e3e3;
     border-radius: 3px 3px 0 0;
 }
 
 .username {
-    // margin: 10px;
-    border-top: 0.5px solid lightgray;
+    border-top: 0.5px solid #e3e3e3;
     border-left: none;
     border-right: none;
-    border-bottom: 0.5px solid lightgray;
+    border-bottom: 0.5px solid #e3e3e3;
 }
 
 .password {
-    border-top: 0.5px solid lightgray;
+    border-top: 0.5px solid #e3e3e3;
     border-left: none;
     border-right: none;
     border-bottom: none;
