--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -27,6 +27,9 @@
     width: 64px;
     border: 5px solid purple;
     margin-right: 5px;
+    // background-image: image-url("default_user_pic.jpg");
+    // background-size: cover;
+    // background-position: center;
 }
 
 .posts-index-div {
