--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -3,51 +3,76 @@
     top: 0;
     bottom: 0;
     left: 22%;
-    border: 3px solid red;
+    // border: 3px solid red;
     margin-top: 80px;
     display: flex;
     flex-direction: column;
     min-width: 650px;
     max-width: 800px;
     z-index: -1;
-    padding: 20px;
+    // padding: 20px;
 }
 
 .posts-form-div {
     display: flex;
     justify-content: flex-end;
-    border: 3px solid green;
+    // border: 3px solid green;
     margin-bottom: 40px;
 }
 
-.current-user-pic {
+.current-user-pic, .user-img {
     display: flex;
     justify-content: start;
     height: 64px;
     width: 64px;
-    border: 5px solid purple;
-    margin-right: 5px;
+    // border: 5px solid purple;
+    // margin-right: 5px;
     // background-image: image-url("default_user_pic.jpg");
-    // background-size: cover;
-    // background-position: center;
+    background-size: cover;
+    background-position: center;
+    margin-right: 15px;
 }
 
 .posts-index-div {
-    border: 3px solid green;
+    // border: 3px solid green;
     display: flex;
     justify-content: flex-end;
 }
 
 .posts-index-list {
-    border: 5px solid red;
+    // border: 5px solid red;
     width: 580px;
-    height: 600px;
+    max-width: 580;
+    min-height: 200px;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.posts-index-list > li {
+    background-color: yellow;
+    border: 1px solid black;
+    height: 500px;
+    margin-bottom: 30px;
+}
+
+
+.post-img {
+    display: flex;
+    justify-content: start;
+    height: 500px;
+    width: 580px;
+    background-size: cover;
+    background-position: center;
 }
 
 .post-user-pic {
     display: flex;
     height: 64px;
     width: 64px;
-    border: 5px solid purple;
+    // border: 5px solid purple;
     margin-right: 5px;
+    background-size: cover;
+    background-position: center;
 }
