--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -7,32 +7,18 @@
     right: 0;
     left: 0;
     background: rgba(0, 0, 0, 0.7);
-    z-index: 502;
 }
 
-.modal-child {
-    margin: 0 auto;
-    position: relative;
-    overflow-y: auto;
-    top: 80px;
-    left: -53px;
+.modal-box {
+    // border: 3px solid rgb(37, 4, 129);
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 22%;
+    margin-top: 80px;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    animation: slide-in 0.5s forwards;
-    -webkit-animation: slide-in 0.5S forwards;
-}
-
-@-webkit-keyframes slide-in {
-    0% {
-        transform: translateY(-30%);
-    }
-
-    100% {
-        transform: translateY(0%);
-    }
-}
-
-.close {
-    cursor: pointer;
+    min-width: 650px;
+    max-width: 800px;
+    padding-left: 10px;
 }
