--- a/app/assets/stylesheets/post-form.scss
+++ b/app/assets/stylesheets/post-form.scss
@@ -1,33 +1,40 @@
 .post-form-box {
-    position: relative;
-    display: block;
-    width: 540px;
-    border-radius: 4px;
-    background-color: white;
-    max-height: 80%;
-    overflow-y: scroll;
+    display: flex;
+    justify-content: flex-end;
+    min-width: 650px;
+    // border: 3px solid green;
 }
 
-.user_name {
-    width: 332px;
+.text-form {
+    // border: 3px solid red;
+    width: 580px;
+    background-color: white;
+}
+
+.post-form-header {
+    width: 545px;
     height: 20px;
     font-size: 13px;
     padding: 15px 15px 10px 20px;
     color: black;
+    display: flex;
+    justify-content: space-between;
+    background-color: white;
+    text-align: center;
 }
 
 .title-text {
     font-size: 35px;
-    width: 500px;
+    width: 540px;
     padding: 5px 20px;
     min-height: 37px;
     border: none;
 }
 
 .body-text {
-    width: 500px;
-    padding: 7px 20px;
-    min-height: 20px;
+    width: 540px;
+    padding: 20px 20px;
+    height: 150px;
     border: none;
     font-size: 13px;
     resize: none;
@@ -43,7 +50,7 @@
     border-radius: 0 0 5px 5px;
 }
 
-.close-modal {
+.close-button {
     width: 51px;
     height: 30px;
     padding: 5px 7px;
@@ -56,7 +63,7 @@
     font-size: 13px;
 }
 
-.submit-post {
+.submit-button {
     width: 62px;
     height: 28px;
     padding: 5px 10px;
@@ -69,28 +76,21 @@
     color: white;
 }
 
-
-.click {
-    background-color: black;
-}
-
-/* photo */
-.photo-post {
-    width: 100%;
-}
+// .photo-post {
+//     width: 100%;
+// }
 
 .upload {
     opacity: 0;
     overflow: hidden;
     position: absolute;
-    z-index: -2;
 }
 
 .upload-file {
     color: black;
     text-align: center;
     font-size: 14px;
-    width: 500px;
+    width: 540px;
     padding: 5px 20px;
     border-top: 1px dashed grey;
     border-bottom: 1px dashed grey;
@@ -98,12 +98,25 @@
     height: 170px;
 }
 
-.fa-camera-retro {
+.post-camera {
     font-size: 45px;
     padding: 20px 0 15px 0;
 }
 
-.fa-laugh-squint {
+.photo-form {
+    background-color: white;
+}
+
+.photo-body-text {
+    width: 540px;
+    padding: 20px 20px;
+    height: 75px;
+    border: none;
+    font-size: 13px;
+    resize: none;
+}
+
+.fa-smile {
     font-size: 20px;
     padding: 30px 0 0 0;
 }
@@ -112,13 +125,9 @@
     display: block;
     margin: 0 auto;
     width: 540px;
-    /* max-height: 450px; */
     background-size: cover;
     background-repeat: no-repeat;
 }
-
-
-/* quote */
 
 .quote-text {
     font-family: cursive;
@@ -127,25 +136,22 @@
     width: 500px;
     word-wrap: break-word;
     border: none;
-    /* outline: none; */
     font-size: 30px;
-
+    font-family: sans-serif;
 }
-
-/* link */
-
 
 .link-text {
     display: flex;
     justify-content: space-around;
-    align-items: center;
     color: black;
-    text-align: center;
     font-size: 14px;
-    width: 538px;
+    width: 545px;
     border: none;
     border-top: 1px dashed grey;
     border-bottom: 1px dashed grey;
     background-color: rgb(242, 242, 242);
-    height: 170px;
+    height: 150px;
+    padding-left: 35px;
+    font-family: sans-serif;
 }
+
