fixing various post creation

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -76,3 +76,12 @@
     background-size: cover;
     background-position: center;
 }
+
+.post-1 {
+    font-size: 40px;
+    background-color: white;
+    height: 300px;
+    width: 580px;
+    align-items: center;
+    align-content: center;
+}
