--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -49,7 +49,9 @@
 
 .nav-loggedin {
     height: 60px;
-    border-bottom: 1px solid rgb(145, 193, 207);
+    // border-bottom: 1px solid rgb(145, 193, 207);
+    border-bottom: 1px solid #566a81;
+    background-color: #0b396d;
 }
 
 // .account {
